<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeecf1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="397dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="374dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/park" />


                    <include layout="@layout/toolbar" />


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="27dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rounded"
                        android:fontFamily="@font/amiko"
                        android:gravity="center_horizontal"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="56sp"
                        android:paddingLeft="7dp"
                        android:paddingTop="4dp"
                        android:paddingRight="7dp"
                        android:paddingBottom="4dp"
                        android:text="@string/maasai_mara"
                        android:textAllCaps="true"
                        android:textColor="#00254d"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/amiko"
                        android:lineSpacingExtra="14sp"
                        android:text="@string/what_a_site_to_behold"
                        android:textColor="#2b2b2b"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amiko"
                        android:lineSpacingExtra="14sp"
                        android:text="@string/for_wild_animal_lovers"
                        android:textColor="#000000"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/amiko"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/about"
                        android:textColor="#202020"
                        android:textSize="13sp" />

                </LinearLayout>

                <include layout="@layout/bottombar" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</LinearLayout>




